material icon support, better gui

--- a/angularBlog/src/app/blog/blog.component.html
+++ b/angularBlog/src/app/blog/blog.component.html
@@ -26,11 +26,8 @@ restructure this with actula DBase
 			</ng-container>
 		</ng-container>
 	</section>
-	<section id="blogInput">
-		<textarea rows="4" cols="50" id="newCommentBlock" maxlength="255">
-		</textarea>
-		<button id="submitNewComment">Comment Now!</button>
-	</section>
+	<BlogComments></BlogComments>
+	
 </section>
 
 
