--- a/angularBlog/src/app/pagemenu/signup-modal/signup-modal.component.html
+++ b/angularBlog/src/app/pagemenu/signup-modal/signup-modal.component.html
@@ -1,19 +1,35 @@
 <h1 mat-dialog-title>Register</h1>
-<mat-dialog-content>
-	<mat-form-field>
-		<input matInput placeholder="Enter your email" [formControl]="email" required>
-		<mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
-	</mat-form-field>
-	<mat-form-field>
-		<input matInput placeholder="Enter your password" [formControl]="password" required>
-		<mat-error *ngIf="password.invalid">{{getErrorMessage()}}</mat-error>
-	</mat-form-field>
-	<mat-form-field>
-		<input matInput placeholder="Re-enter your password" [formControl]="password2" required>
-		<mat-error *ngIf="password2.invalid">{{getErrorMessage()}}</mat-error>
-	</mat-form-field>
-</mat-dialog-content>
-<mat-dialog-actions>
-	<button (click)="onCancelClick()">Cancel Sign Up</button>
-	<button (click)="onRegisterClick()">Register</button>
-</mat-dialog-actions>
+<form [formGroup]="registerForm">
+	<mat-dialog-content>
+		<mat-form-field [floatLabel]="registerForm.value.floatLabel" >
+			<mat-label>Enter your email</mat-label>
+			<input matInput formControlName="email" name="email" required>
+			<mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+			<!-- <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>  -->
+
+		</mat-form-field>
+		<mat-form-field [floatLabel]="registerForm.value.floatLabel">
+			<mat-label>Enter your password</mat-label>
+			<input matInput type="password" formControlName="password" required>
+			<mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+			<!--  <mat-error *ngIf="password.invalid">{{getErrorMessage()}}</mat-error>  -->
+		</mat-form-field>
+		<mat-form-field [floatLabel]="registerForm.value.floatLabel">
+			<mat-label>Re-enter your password</mat-label>
+			<input matInput type="password" formControlName="password2" required>
+			<mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+			<!-- 
+			[errorStateMatcher]="CrossFieldErrorMatcher"
+			
+			<mat-error *ngIf="registerForm.hasError('passwords do not match')">
+			Passwords Do Not Match!!!
+			</mat-error>
+			-->
+			<!--  <mat-error *ngIf="password2.invalid">{{getErrorMessage()}}</mat-error>  -->
+		</mat-form-field>
+	</mat-dialog-content>
+	<mat-dialog-actions>
+		<button (click)="onCancelClick()">Cancel Sign Up</button>
+		<button (click)="onRegisterClick()">Register</button>
+	</mat-dialog-actions>
+</form>
